# flower-hackathon-2025

./: .gitignore  DATA_MODEL.md  GETTING_STARTED.md  IMPLEMENTATION.md  PROJECT_README.md  README.md  TASK_SPEC.md  constants.py  find_labels.py  flower-hackathon.code-workspace  generate_seed_data.py  main.py  pyproject.toml  render.yaml
.github/: copilot-instructions.md
api/: .env.example  API_README.md  README.md  config.py  constants.py  database.py  dependencies.py  docker-compose.yml  example_usage.py  init_db.py  main.py  main_hack.py  model_service.py  models.py  pyproject.toml  render.yaml  seed_loader.py  student_a.pkl  student_b.pkl  student_c.pkl  test_implementation.py  train_models.py
api/ml/: __init__.py  inference.py  model.py  preprocessing.py
api/routers/: __init__.py  fso.py  health.py  metadata.py  patients.py  predictions.py
api/scripts/: init_db.sh  start.sh  test_predict_and_save.py
api/seeds/: doctor_labels.json  exams.json  images.json  model_versions.json  patients.json  summary.json
api/services/: __init__.py  patient_service.py  prediction_service.py
api/tests/: conftest.py  test_api.py
coldstart/: README.md  pyproject.toml
ui/: .env.example  README.md  index.html  package-lock.json  package.json
ui/src/: App.css  App.tsx
ui/src/components/: AdminPanel.tsx  ClinicianPanel.tsx  HomePage.tsx  PatientDetailPanel.tsx  PatientListPanel.tsx  ProofOfValuePlot.tsx
