[project]
name = "flower-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "pandas>=2.3.3",
    "torchxrayvision>=1.2.0",
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
]

[project.scripts]
start = "uvicorn main:app --reload --host 0.0.0.0 --port 8000"
